--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="container banner">
+        <div class="banner-text">
+          <h1>Let's make beautiful flowers a part of your life.</h1>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters.
+          </p>
+          <button class="btn-primary">Shop Now</button>
+        </div>
+        <img
+          class="banner-img"
+          src="./images/pngwing 10.png"
+          alt="Banner photo"
+        />
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
