--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flower Shop | Sample of Love!</title>
+    <title>Flower Shop | Symbol of Love!</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -26,7 +26,44 @@
         />
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Our Featured Flowers -->
+      <section class="container feature">
+        <h2>Our Featured Flowers</h2>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <div class="flex-items">
+          <div class="feature-items">
+            <img src="./images/pngwing 6.png" alt="tree" />
+            <a href="">Pink Flower Tree</a>
+          </div>
+          <div class="feature-items">
+            <img src="./images/pngwing 5.png" alt="tree" />
+            <a href="">Pink Flower Tree</a>
+          </div>
+          <div class="feature-items">
+            <img src="./images/pngwing 7.png" alt="tree" />
+            <a href="">Pink Flower Tree</a>
+          </div>
+        </div>
+        <div class="flex-items service">
+          <div class="info">
+            <img src="./images/Group 57.png" alt="Group 57" />
+            <p>Same Day Delivery. Click & Collect.</p>
+          </div>
+          <div class="info">
+            <img src="./images/Group 58.png" alt="Group 58" />
+            <p>Fresh Flowers. Local Growers.</p>
+          </div>
+          <div class="info">
+            <img src="./images/Group 59.png" alt="Group 59" />
+            <p>24/7 Free Support.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
