Hot deal section added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
           </div>
         </div>
       </section>
+      <!-- Hot Deal section -->
+      <section class="hot-deal">
+        <div class="flex-items">
+          <div class="hot-deal-text">
+            <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+            <p>
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+            <button class="btn-primary">Sign Up</button>
+          </div>
+          <img src="./images/pngwing 8.png" alt="hot deal">
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
