Intagram section added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,21 @@
             </p>
             <button class="btn-primary">Sign Up</button>
           </div>
-          <img src="./images/pngwing 8.png" alt="hot deal">
+          <img src="./images/pngwing 8.png" alt="hot deal" />
+        </div>
+      </section>
+      <!-- Instagram section -->
+      <section class="container instagram">
+        <h2>Instagram</h2>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <div class="flex-items">
+          <img src="./images/Flower 01.png" alt="Rectangle" />
+          <img src="./images/Rectangle 4.png" alt="Rectangle" />
+          <img src="./images/Rectangle 5.png" alt="Rectangle" />
+          <img src="./images/Rectangle 6.png" alt="Rectangle" />
         </div>
       </section>
     </main>
