--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
           <img src="./images/Rectangle 6.png" alt="Rectangle" />
         </div>
       </section>
+      <section class="container newsletter">
+        <h2>Get The Latest Deals</h2>
+        <p>$30 coupon for first shopping</p>
+        <form action="">
+          <input
+            type="email"
+            name=""
+            id="email"
+            placeholder="Enter your email here...."
+          />
+          <input class="btn-primary" type="submit" value="Subscribe" />
+        </form>
+      </section>
     </main>
     <footer></footer>
   </body>
