--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
         </form>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <h2><span>Flower</span>Shop</h2>
+      <p class="footer-paragraph">
+        It is a long established fact that a reader will be distracted by the
+        readable content of a page when looking at its layout.
+      </p>
+      <p>@2020-2023, FlowerShop.com. All rights reserved.</p>
+    </footer>
   </body>
 </html>
